# cc-hardware

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ambient.pkl  background.html  contributing.html  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_capture.py  run_capture_process.ipynb  search.html  searchindex.js  setup.html  test.py
.doctrees/: background.doctree  contributing.doctree  environment.pickle  index.doctree  setup.doctree
.doctrees/_templates/python/: module.doctree
.doctrees/configuration/: index.doctree
.doctrees/examples/: algo_nlos.doctree  camera_viewer.doctree  index.doctree  sensors.doctree  spad_dashboard.doctree  spad_gantry_capture.doctree  stepper_motor_controller.doctree  stepper_motors.doctree
.doctrees/usage/: api.doctree  cli.doctree  index.doctree
.github/workflows/: gh_pages.yml
_modules/: index.html
_modules/algos/: algorithm.html  aruco.html
_modules/drivers/: safe_serial.html  sensor.html
_modules/drivers/cameras/: camera.html  flir.html  pkl.html  realsense.html
_modules/drivers/spads/: dashboard.html  pkl.html  spad.html  tmf8828.html  vl53l8ch.html
_modules/drivers/stepper_motors/: kinesis_stepper.html  stepper_controller.html  stepper_motor.html  stepper_system.html  telemetrix_stepper.html
_modules/utils/: asyncio_utils.html  blocking_deque.html  config.html  constants.html  file_handlers.html  logger.html  manager.html  misc.html  plotting.html  registry.html  serial_utils.html  setting.html  singleton.html  writers.html
_sources/: contributing.md.txt  index.md.txt
_sources/examples/: index.md.txt  sensors.md.txt  spad_dashboard.md.txt  stepper_motor_controller.md.txt
_sources/usage/: api.md.txt
_templates/python/: module.html
configuration/: index.html
docker/: dev.dockerfile  spads.dockerfile
docker/snippets/: librealsense2.dockerfile  libsurvive.dockerfile  miniconda.dockerfile  nano.dockerfile
docs/: conf.py  contributing.md  index.md  pyproject.toml
docs/_templates/python/: module.rst
docs/examples/: algo_nlos.md  camera_viewer.md  index.md  spad_gantry_capture.md  stepper_motors.md
docs/usage/: api.md  cli.md  index.md
examples/: algo_nlos.html  camera_viewer.html  index.html  sensors.html  spad_dashboard.html  spad_gantry_capture.html  stepper_motor_controller.html  stepper_motors.html
examples/algo_nlos/: README.md  algo_nlos_arc_visualization.py  algo_nlos_seg.py  algo_nlos_tmf8828_realsense.py  algo_nlos_trainer.py  model.py
examples/camera_viewer/: README.md  camera_viewer.py
examples/classification_demo/: demo.py
examples/demos/: nlos_spad_and_gantry_demo.py
examples/demos/classification_demo/: demo.py
examples/demos/cvpr2025/: cvpr2025.py  nlos_datadriven_capture.py  nlos_datadriven_eval.ipynb  nlos_pose_capture.py
examples/localization_demo/: demo.py  demo_test.py  requirements.txt
examples/mocap/: mocap_capture.py  mocap_server.py  mocap_viewer.py
examples/modeling_capture/: README.md  spad_gantry_capture.py  spad_visualization_capture.py  training_example.ipynb
examples/nick_stash/: README.md
examples/robot_capture/: capture.py
examples/sensors/: README.md  spad_dashboard.py  spad_dashboard_cli.py
examples/socket/: socket_example.py
examples/spad_calibration/: README.md  tmf8828_calibration.py
examples/spad_camera_capture/: tmf8828_realsense_capture.py  tmf8828_realsense_dashboard.py
examples/spad_capture/: README.md  spad_capture.py
examples/spad_dashboard/: README.md  spad_dashboard.py  spad_wrappers.py  spad_wrappers_demo.py
examples/spad_flash/: README.md  tmf8828_flash.py  vl53l8ch_flash.py
examples/spad_gantry_capture/: README.md  spad_gantry_capture.py  spad_gantry_capture_v1.py  spad_gantry_capture_v2.py
examples/spad_transient_viewer/: spad_transient_viewer.py
examples/spads/: dashboard.py
examples/stepper_motor_controller/: README.md  custom_stepper_system.py  stepper_motor_controller.py  stepper_motor_controller_cli.py
examples/stepper_motors/: controller.py  custom_stepper_system.py  stepper_system_w_spad.py
pkgs/algos/: README.md  pyproject.toml
pkgs/cnc_robot/: README.md  pyproject.toml
pkgs/drivers/: README.md  pyproject.toml
pkgs/tools/: README.md  pyproject.toml
pkgs/utils/: pyproject.toml
scripts/: pi_setup.sh
usage/: api.html  cli.html  index.html
(+555 files in other folders)
