[tool.poetry]
name = "cc_hardware_docs"
version = "0.1.0"
description = "Documentation for cc_hardware"
authors = ["Camera Culture <a2cc@media.mit.edu>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
cc_hardware = { path = "..", develop = true }
sphinx = "7.2.6"
furo = "2023.9.10"
sphinx-autoapi = "3.0.0"
sphinx-autobuild = "2021.3.14"
myst-parser = "2.0.0"
sphinx-argparse = "0.4.0"
sphinxcontrib-typer = "0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
